# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,8 @@ import authRouter from "./auth";
 import foldersRouter from "./folders";
 import resourcesRouter from "./resources";
 import unitsRouter from "./units";
+import socialRouter from "./social";
+import chatRouter from "./chat";
 
 const router: IRouter = Router();
 
@@ -12,5 +14,7 @@ router.use(authRouter);
 router.use(foldersRouter);
 router.use(resourcesRouter);
 router.use(unitsRouter);
+router.use(socialRouter);
+router.use(chatRouter);
 
 export default router;
